--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,4 +12,4 @@ jobs:
     - uses: hmarr/auto-approve-action@v2
       if: github.actor == 'dependabot[bot]'
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+        github-token: ${{ secrets.DEPENDABOT_TOKEN }}
