--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,3 +17,4 @@ jobs:
       if: github.actor == 'dependabot[bot]'
       with:
         github-token: ${{ secrets.DEPENDABOT_TOKEN }}
+        pull-request-number: ${{ github.event.inputs.pullRequestNumber }}
