--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       pull-requests: write
     steps:
     - uses: hmarr/auto-approve-action@v2
-      if: github.actor == 'dependabot[bot]'
+      if: github.actor == 'dependabot[bot]' || github.actor == 'adeloyedeji'
       with:
         github-token: ${{ secrets.DEPENDABOT_TOKEN }}
         pull-request-number: ${{ github.event.inputs.pullRequestNumber }}
