--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -37,6 +37,6 @@ jobs:
           token: ${{ secrets.DEPENDABOT_TOKEN }}
           merge-method: rebase
           do-not-merge-labels: never-merge
-          required-labels: automerge
+          #required-labels: automerge
           pull-request: ${{ github.event.inputs.pull-request }}
           dry-run: false
