--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,16 @@
 name: Auto approve
 
 on:
+  pull_request_target:
+    types:
+      - opened
+      - synchronized
+      - reopened
+      - edited
+      - labeled
+      - unlabeled
+      - ready_for_review
+      
   workflow_dispatch:
     inputs: 
       pullRequestNumber:
